fix: spacing between sizes & utility styles

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,12 @@ h3 {
   line-height: 1.3;
 }
 
+@media only screen and (max-width: 30em) {
+  h2 {
+    font-size: 3.5rem !important;
+  }
+}
+
 p {
   line-height: 1.6;
 }
@@ -114,7 +120,7 @@ input:focus {
 .section-container {
   max-width: 94em;
   margin: 0 auto;
-  padding: 7.2rem var(--side-padding) 14rem;
+  padding: 7.2rem var(--side-padding) 15rem;
 }
 
 .heading-underline {
@@ -134,6 +140,11 @@ input:focus {
   left: 50%;
   transform: translateX(-50%);
   background-color: var(--clr-primary);
+}
+@media only screen and (max-width: 30em) {
+  .heading-underline::before {
+    height: 2px;
+  }
 }
 
 .input-container {
@@ -402,7 +413,7 @@ input:focus {
 .achieve {
   margin-top: 35rem;
   position: relative;
-  padding: 14rem 2.4rem 6.4rem;
+  padding: 14rem 2.4rem 8.4rem;
   background-color: var(--clr-primary);
   color: var(--clr-neutral-white);
   display: grid;
