--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -42,6 +42,12 @@ h3 {
   line-height: 1.3;
 }
 
+h2 {
+  @include abs.media-query(mobile) {
+    font-size: 3.5rem !important;
+  }
+}
+
 p {
   line-height: 1.6;
 }
