--- a/scss/components/_achievements.scss
+++ b/scss/components/_achievements.scss
@@ -3,7 +3,7 @@
 .achieve {
   margin-top: 35rem;
   position: relative;
-  padding: 14rem 2.4rem 6.4rem;
+  padding: 14rem 2.4rem 8.4rem;
   background-color: var(--clr-primary);
   color: var(--clr-neutral-white);
   @include abs.grid-center;
